# NEMESIS-UOR-Fork

./: CITATION.cff  CLAUDE.md  Cargo.toml  Nemesis Bridge  README.md  RELEASING.md
.github/workflows/: ci.yml  release.yml
codegen/src/: emit.rs  enforcement.rs  enums.rs  lib.rs  mapping.rs  traits.rs
conformance/shapes/: uor-shapes.ttl
conformance/src/: lib.rs
conformance/standards/: docs.md  ebnf.md  jsonld.md  owl.md  shacl.md  website.md
docs/content/: architecture.md  overview.md
docs/content/concepts/: addressing.md  algebraic-laws.md  analytical-completeness.md  canonical-form.md  cohomology.md  composition.md  constraint-algebra.md  content-addressing.md  differential-calculus.md  evaluation.md  factorization.md  free-rank.md  homology.md  homotopy-nerve.md  iterative-resolution.md  moduli-space.md  monodromy.md  observables.md  partition.md  quantum-spectral-sequence.md  quantum-universality.md  resolution.md  ring.md  session-resolution.md  sheaf-semantics.md  state-model.md  type-completeness.md  type-synthesis.md  type-system.md
docs/content/guides/: conformance.md  deformation-analysis.md  homotopy-pipeline.md  implementing-prism.md  incremental-completeness.md  psi-pipeline.md  type-synthesis.md
docs/integration/: braille_integration.md
docs/src/: lib.rs  nav.rs  renderer.rs
foundation/: Cargo.toml  README.md
foundation/src/: enforcement.rs  enums.rs  lib.rs
foundation/src/bridge/: cert.rs  cohomology.rs  conformance_.rs  derivation.rs  homology.rs  interaction.rs  observable.rs  partition.rs  proof.rs  query.rs  resolver.rs  trace.rs
foundation/src/kernel/: address.rs  carry.rs  effect.rs  failure.rs  linear.rs  mod.rs  op.rs  operad.rs  parallel.rs  predicate.rs  recursion.rs  reduction.rs  region.rs  schema.rs  stream.rs
foundation/src/user/: morphism.rs  state.rs  type_.rs
spec/: Nemesis  README.md
spec/src/: counts.rs  lib.rs  model.rs
spec/src/namespaces/: carry.rs  cert.rs  cohomology.rs  conformance_.rs  convergence.rs  derivation.rs  effect.rs  failure.rs  homology.rs  interaction.rs  linear.rs  mod.rs  monoidal.rs  op.rs  (+18 more)
uor-foundation-macros/: Cargo.toml  README.md
uor-foundation-macros/src/: address.rs  codegen.rs  lexer.rs  lib.rs  parser.rs  surface.rs
uor-foundation-macros/tests/: integration.rs
website/content/: about.md  index.md
website/src/: concepts.rs  lib.rs  model.rs  nav.rs  pipeline.rs  renderer.rs  search.rs  svg.rs
(+178 files in other folders)
