[workspace]
members = ["spec", "codegen", "foundation", "conformance", "docs", "website", "clients"]
resolver = "2"

[workspace.package]
version = "0.1.2"
edition = "2021"
rust-version = "1.70"
license = "Apache-2.0"
repository = "https://github.com/UOR-Foundation/UOR-Framework"
homepage = "https://uor.foundation/"

[workspace.dependencies]
# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RDF / Turtle / N-Triples
sophia = "0.8"
sophia_api = "0.8"
sophia_turtle = "0.8"
sophia_jsonld = "0.8"
sophia_inmem = "0.8"

# CLI
clap = { version = "4", features = ["derive"] }

# Templating
tera = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# File traversal
walkdir = "2"

# Markdown rendering
pulldown-cmark = "0.11"

# HTML5 parsing (conformance)
html5ever = "0.27"
markup5ever = "0.12"
markup5ever_rcdom = "0.2"

# CSS parsing (conformance)
cssparser = "0.33"

# TOML parsing (docs front-matter claims)
toml = "0.8"
