[package]
name = "uor-foundation-macros"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Proc macro crate for the UOR Foundation — provides the uor! DSL macro"
documentation = "https://docs.rs/uor-foundation-macros"
readme = "README.md"
keywords = ["proc-macro", "uor", "dsl", "compile-time", "term-language"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
uor-foundation = { path = "../foundation" }
